Fix deprecation warnings when building with Java 9+